--- a/pages/bcsrif/BCSRIF_2019_136.qmd
+++ b/pages/bcsrif/BCSRIF_2019_136.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Science-based review of hatchery results in the DFO Pacific Region"
+output-file: "BCSRIF_2019_136.html"
 Leads: ""
 toc: true
 ---
