--- a/pages/bcsrif/BCSRIF_2020_217.qmd
+++ b/pages/bcsrif/BCSRIF_2020_217.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Developing a cumulative effects modelling framework for the recovery of aquatic salmonid populations"
+output-file: "BCSRIF_2020_217.html"
 Leads: ""
 toc: true
 ---
