--- a/pages/bcsrif/BCSRIF_2022_334.qmd
+++ b/pages/bcsrif/BCSRIF_2022_334.qmd
@@ -1,5 +1,6 @@
 ---
 title: "First Nations led salmon habitat and population monitoring, research and cumulative effects assessment in the Lower Fraser River and Boundary Bay"
+output-file: "BCSRIF_2022_334.html"
 Leads: ""
 toc: true
 ---
