--- a/pages/bcsrif/BCSRIF_2022_399.qmd
+++ b/pages/bcsrif/BCSRIF_2022_399.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks."
+output-file: "BCSRIF_2022_399.html"
 Leads: ""
 toc: true
 ---
