--- a/pages/bcsrif/BCSRIF_2022_401.qmd
+++ b/pages/bcsrif/BCSRIF_2022_401.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Supporting and connecting community-based monitoring for climate-resilient salmon ecosystems"
+output-file: "BCSRIF_2022_401.html"
 Leads: ""
 toc: true
 ---
