--- a/pages/bcsrif/BCSRIF_2022_442.qmd
+++ b/pages/bcsrif/BCSRIF_2022_442.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Identifying factors that influence early marine survival of WCVI Chinook salmon"
+output-file: "BCSRIF_2022_442.html"
 Leads: ""
 toc: true
 ---
