--- a/pages/bcsrif/BCSRIF_2022_454.qmd
+++ b/pages/bcsrif/BCSRIF_2022_454.qmd
@@ -1,5 +1,6 @@
 ---
 title: "FRIM – Short term mortality holding and respirometry studies"
+output-file: "BCSRIF_2022_454.html"
 Leads: ""
 toc: true
 ---
