--- a/pages/pssi/2394.qmd
+++ b/pages/pssi/2394.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Enhanced salmon bycatch monitoring and sampling in the Pacific region groundfish trawl fishery"
+output-file: "2394.html"
 Leads: "Cory Lagasse"
 toc: true
 ---
