--- a/pages/pssi/2407.qmd
+++ b/pages/pssi/2407.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Follow the Fish: An integrated Chinook salmon assessment and monitoring program for the West Coast of Vancouver Island"
+output-file: "2407.html"
 Leads: "Jessy Bokvist"
 toc: true
 ---
