--- a/pages/pssi/2408.qmd
+++ b/pages/pssi/2408.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Improvement, Expansion and Modernization of Salmonid Health Diagnostic Services For Optimizing Salmonid Hatchery Health Management."
+output-file: "2408.html"
 Leads: "Amy Long"
 toc: true
 ---
