--- a/pages/pssi/2409.qmd
+++ b/pages/pssi/2409.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Convergent tracks: a tagging study to quantify salmon predation by sea lions"
+output-file: "2409.html"
 Leads: "Strahan Tucker, Cameron Freshwater"
 toc: true
 ---
