--- a/pages/pssi/2410.qmd
+++ b/pages/pssi/2410.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future"
+output-file: "2410.html"
 Leads: "Thomas Therriault, Cher LaCoste"
 toc: true
 ---
