--- a/pages/pssi/2413.qmd
+++ b/pages/pssi/2413.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Barkley Sound and Clayoquot Sound Krill Monitoring"
+output-file: "2413.html"
 Leads: "Akash Sastri, Kelly Young"
 toc: true
 ---
