--- a/pages/pssi/2416.qmd
+++ b/pages/pssi/2416.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Monitoring and predicting the exposure of Pacific salmon to harmful algal biotoxins"
+output-file: "2416.html"
 Leads: "Andrew Ross"
 toc: true
 ---
