--- a/pages/pssi/2417.qmd
+++ b/pages/pssi/2417.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Optimization of feeds used in the hatchery production of Pacific Salmon."
+output-file: "2417.html"
 Leads: "Ian Forster, Cher LaCoste"
 toc: true
 ---
