--- a/pages/pssi/2421.qmd
+++ b/pages/pssi/2421.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Measurement of stress hormones in scales and its application for the identification of conditions causing chronic stress in Pacific Salmon."
+output-file: "2421.html"
 Leads: "Stewart Johnson"
 toc: true
 ---
