--- a/pages/pssi/2424.qmd
+++ b/pages/pssi/2424.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Mechanistic modelling to link hydrology to juvenile salmon habitat quality and productivity"
+output-file: "2424.html"
 Leads: "Sean Naman"
 toc: true
 ---
