--- a/pages/pssi/2425.qmd
+++ b/pages/pssi/2425.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Development of geospatial tools for large-scale freshwater salmon habitat assessment by the Freshwater Spatial Ecology Program"
+output-file: "2425.html"
 Leads: "Josie Iacarella"
 toc: true
 ---
