--- a/pages/pssi/2432.qmd
+++ b/pages/pssi/2432.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Barkley Sound and Clayoquot Sound acoustic monitoring of salmon and salmon prey"
+output-file: "2432.html"
 Leads: "Stephane Gauthier"
 toc: true
 ---
