--- a/pages/pssi/2437.qmd
+++ b/pages/pssi/2437.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Adaptive genetic variation and climate change resilience in Canadian Pacific salmon"
+output-file: "2437.html"
 Leads: "Eric Rondeau, Tim Healy, Kyle Wellband"
 toc: true
 ---
