--- a/pages/pssi/2447.qmd
+++ b/pages/pssi/2447.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA"
+output-file: "2447.html"
 Leads: "Kristi Miller-Saunders"
 toc: true
 ---
