--- a/pages/pssi/2449.qmd
+++ b/pages/pssi/2449.qmd
@@ -1,5 +1,6 @@
 ---
 title: "A decision-support tool that considers harvest, hatchery, and habitat management levers to support implementation of the Fisheries Act for Pacific salmon"
+output-file: "2449.html"
 Leads: "Carrie Holt, Brendan Connors, Catarina Wor"
 toc: true
 ---
