--- a/pages/pssi/2451.qmd
+++ b/pages/pssi/2451.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Relative reproductive success of hatchery- versus natural-origin salmon in Canadian integrated populations"
+output-file: "2451.html"
 Leads: "Eric Rondeau, Tim Healy, Kyle Wellband"
 toc: true
 ---
