--- a/pages/pssi/2453.qmd
+++ b/pages/pssi/2453.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Epigenetic variation between hatchery- and natural-origin Canadian Chinook Salmon"
+output-file: "2453.html"
 Leads: "Eric Rondeau, Tim Healy, Kyle Wellband"
 toc: true
 ---
