--- a/pages/pssi/2539.qmd
+++ b/pages/pssi/2539.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Climate Downscaling for salmon conservation in Marine Ecosystems"
+output-file: "2539.html"
 Leads: "Di Wan, James Christian"
 toc: true
 ---
