--- a/pages/pssi/2546.qmd
+++ b/pages/pssi/2546.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Fishery & Assessment Data Section - Data Stewardship Unit"
+output-file: "2546.html"
 Leads: "Shelee Hamilton"
 toc: true
 ---
