--- a/pages/pssi/3119.qmd
+++ b/pages/pssi/3119.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Genomic consequences of stray hatchery introgression"
+output-file: "3119.html"
 Leads: "Eric Rondeau, Timothy Healy, Kyle Wellband"
 toc: true
 ---
