--- a/pages/pssi/3121.qmd
+++ b/pages/pssi/3121.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Impact of genetic divergence on outbreeding depression in Chinook Salmon"
+output-file: "3121.html"
 Leads: "Eric Rondeau, Timothy Healy, Kyle Wellband"
 toc: true
 ---
