--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,11 @@ toc: false
 
 ## 🗓️ December 2025 Calendar Overview
 
+### 🔍 Program Legend
+- 🌊 PSSI (Pacific Salmon Science Initiative)
+- 🌱 BCSRIF (BC Salmon Restoration and Innovation Fund)
+- ❓ Unknown or Unspecified
+
 ::: {.calendar}
 <style>
 .calendar-table td { width: 14.28%; height: 100px; border: 1px solid #ccc; padding: 8px; vertical-align: top; }
@@ -72,99 +77,101 @@ toc: false
 ### 🐟 Freshwater Stressors
 Mechanistic, physiological, and quantitative studies for evaluating stressors to freshwater habitats of Pacific salmon, including cumulative stressors.
 
-- 🌊 [Quantifying Yukon Chinook migration mortality and its implications for fisheries management and rebuilding under the Fish Stock Provisions of the Fisheries Act](pages/2402.qmd) | Brendan Connors, Adam O'Dell
-- 🌊 [Mechanistic modelling to link hydrology to juvenile salmon habitat quality and productivity](pages/2424.qmd) | Sean Naman
-- 🌊 [Development of geospatial tools for large-scale freshwater salmon habitat assessment by the Freshwater Spatial Ecology Program](pages/2425.qmd) | Josie Iacarella
-- 🌊 [Quantitative assessment of the impact of Smallmouth Bass suppression efforts in Cultus Lake and SMB emigration from Cultus Lake](pages/2443.qmd) | Daniel Doutaz
-- 🌊 [Improved understanding of cumulative impacts on salmon survival across freshwater life-stages; tools and approaches for mechanistic assessments](pages/2493.qmd) | David Patterson, Douglas Braun
-- 🌱 [Developing a cumulative effects modelling framework for the recovery of aquatic salmonid populations](pages/BCSRIF_2020_217.qmd) | University of British Columbia (Vancouver), Institute for the Oceans and Fisheries
-- 🌱 [First Nations led salmon habitat and population monitoring, research and cumulative effects assessment in the Lower Fraser River and Boundary Bay](pages/BCSRIF_2022_334.qmd) | Salish Sea Indigenous Guardians Association
 - 🌱 [Analysis of forestry effects on Pacific salmon in Musgamagw Dzawada’enuxw territory and across
-coastal BC.](pages/BCSRIF_2022_449.qmd) | Salmon Coast Field Station Society
+coastal BC.](BCSRIF_2022_449.html) | 
+- 🌱 [Developing a cumulative effects modelling framework for the recovery of aquatic salmonid populations](BCSRIF_2020_217.html) | 
+- 🌊 [Development of geospatial tools for large-scale freshwater salmon habitat assessment by the Freshwater Spatial Ecology Program](2425.html) | 
+- 🌱 [First Nations led salmon habitat and population monitoring, research and cumulative effects assessment in the Lower Fraser River and Boundary Bay](BCSRIF_2022_334.html) | 
+- 🌊 [Improved understanding of cumulative impacts on salmon survival across freshwater life-stages; tools and approaches for mechanistic assessments](2493.html) | 
+- 🌊 [Mechanistic modelling to link hydrology to juvenile salmon habitat quality and productivity](2424.html) | 
+- 🌊 [Quantifying Yukon Chinook migration mortality and its implications for fisheries management and rebuilding under the Fish Stock Provisions of the Fisheries Act](2402.html) | 
+- 🌊 [Quantitative assessment of the impact of Smallmouth Bass suppression efforts in Cultus Lake and SMB emigration from Cultus Lake](2443.html) | 
 
 ### 🐟 Salmon In A Changing Climate
 Long-term implications of climate change for Pacific Salmon and their ecosystems.
 
-- 🌊 [Biological models to support prioritizing salmon stocks under future climates](pages/2405.qmd) | Patrick Thompson, Cameron Freshwater, Brendan Connors, Josie Iacarella, 
-- 🌊 [Changing coastal productivity: Using sediment cores, water properties and archived plankton data to identify changes at the bottom of the food web in BC’s coastal waters](pages/2406.qmd) | Sophia Johannessen
-- 🌊 [Adaptive genetic variation and climate change resilience in Canadian Pacific salmon](pages/2437.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
-- 🌊 [Climate Downscaling for salmon conservation in Marine Ecosystems](pages/2539.qmd) | Di Wan, James Christian
-- 🌱 [Development of High-resolution Climate Change Freshwater Hazard Data for BC](pages/BCSRIF_2022_384.qmd) | Pacific Climate Impacts Consortium
-- 🌱 [Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks.](pages/BCSRIF_2022_399.qmd) | University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences
-- 🌱 [Supporting and connecting community-based monitoring for climate-resilient salmon ecosystems](pages/BCSRIF_2022_401.qmd) | Pacific Salmon Foundation
+- 🌊 [Adaptive genetic variation and climate change resilience in Canadian Pacific salmon](2437.html) | 
+- 🌊 [Biological models to support prioritizing salmon stocks under future climates](2405.html) | 
+- 🌊 [Changing coastal productivity: Using sediment cores, water properties and archived plankton data to identify changes at the bottom of the food web in BC’s coastal waters](2406.html) | 
+- 🌊 [Climate Downscaling for salmon conservation in Marine Ecosystems](2539.html) | 
+- 🌱 [Development of High-resolution Climate Change Freshwater Hazard Data for BC](BCSRIF_2022_384.html) | 
+- 🌱 [Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks.](BCSRIF_2022_399.html) | 
+- 🌱 [Supporting and connecting community-based monitoring for climate-resilient salmon ecosystems](BCSRIF_2022_401.html) | 
 
 ## 📅 December 04, 2025
 
 ### 🐟 Follow The Fish
 A review of the Follow the Fish Program, including methods and approaches for life cycle assessment of WCVI Chinook and ecosystem-scale research programs. 
 
-- 🌊 [Identifying good practices for considering Indigenous Knowledge in Rebuilding Plan targets and stock assessment reference poi](pages/2397.qmd) | Carrie Holt
-- 🌊 [WCVI Sediment Transport and Redd Scour Assessment](pages/2398.qmd) | Diana McHugh
-- 🌊 [Follow the Fish: An integrated Chinook salmon assessment and monitoring program for the West Coast of Vancouver Island](pages/2407.qmd) | Jessy Bokvist
-- 🌊 [Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage.](pages/2422.qmd) | Andrew Ross, Xiangjun Liao, Nicole LaForge
-- 🌊 [Barkley Sound and Clayoquot Sound acoustic monitoring of salmon and salmon prey](pages/2432.qmd) | Stephane Gauthier
-- 🌊 [Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA](pages/2447.qmd) | Kristi Miller-Saunders
-- 🌱 [Research in support of Sarita Chinook as an Ecological Indicator and WCVI Chinook Salmon Rebuilding](pages/BCSRIF_2022_332.qmd) | Huu-ay-aht First Nations
-- 🌱 [Chinook Salmon Assessments and WCVI Chinook Salmon Rebuilding in the Kaouk and Artlish Watersheds](pages/BCSRIF_2022_337.qmd) | Ka:’yu:’k’t’h’/Che:k’tles7et’h’ First Nation
-- 🌱 [Identifying factors that influence early marine survival of WCVI Chinook salmon](pages/BCSRIF_2022_442.qmd) | Pacific Salmon Foundation
+- 🌊 [Barkley Sound and Clayoquot Sound acoustic monitoring of salmon and salmon prey](2432.html) | 
+- 🌱 [Chinook Salmon Assessments and WCVI Chinook Salmon Rebuilding in the Kaouk and Artlish Watersheds](BCSRIF_2022_337.html) | 
+- 🌊 [Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage.](2422.html) | 
+- 🌊 [Follow the Fish: An integrated Chinook salmon assessment and monitoring program for the West Coast of Vancouver Island](2407.html) | 
+- 🌱 [Identifying factors that influence early marine survival of WCVI Chinook salmon](BCSRIF_2022_442.html) | 
+- 🌊 [Identifying good practices for considering Indigenous Knowledge in Rebuilding Plan targets and stock assessment reference poi](2397.html) | 
+- 🌊 [Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA](2447.html) | 
+- 🌱 [Research in support of Sarita Chinook as an Ecological Indicator and WCVI Chinook Salmon Rebuilding](BCSRIF_2022_332.html) | 
+- 🌊 [WCVI Sediment Transport and Redd Scour Assessment](2398.html) | 
 
 ### 🐟 Marine Stressors
 Research on stressors in nearshore marine ecosystems and their effects on salmon survival.
 
-- 🌊 [Improving baseline knowledge of environmental conditions in Vancouver Islands fjords through observations and modelling, with a focus on hypoxia dynamics, climate change, and the potential implications for Pacific salmon](pages/2404.qmd) | Laura Bianucci
-- 🌊 [Convergent tracks: a tagging study to quantify salmon predation by sea lions](pages/2409.qmd) | Strahan Tucker, Cameron Freshwater
-- 🌊 [Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species](pages/2412.qmd) | Chris Pearce
-- 🌊 [Barkley Sound and Clayoquot Sound Krill Monitoring](pages/2413.qmd) | Akash Sastri, Kelly Young
-- 🌊 [Monitoring and predicting the exposure of Pacific salmon to harmful algal biotoxins](pages/2416.qmd) | Andrew Ross
-- 🌊 [NA](pages/BCSRIF_2019_040-136D.qmd) | 
-- 🌱 [Determining the mechanisms of impacts of a changing climate on zooplankton in the Salish Sea using models and observations](pages/BCSRIF_2022_358.qmd) | University of British Columbia (Vancouver), Department of Earth, Ocean and Atmospheric Sciences
+- 🌊 [Barkley Sound and Clayoquot Sound Krill Monitoring](2413.html) | 
+- 🌊 [Convergent tracks: a tagging study to quantify salmon predation by sea lions](2409.html) | 
+- 🌱 [Determining the mechanisms of impacts of a changing climate on zooplankton in the Salish Sea using models and observations](BCSRIF_2022_358.html) | 
+- 🌊 [Improving baseline knowledge of environmental conditions in Vancouver Islands fjords through observations and modelling, with a focus on hypoxia dynamics, climate change, and the potential implications for Pacific salmon](2404.html) | 
+- 🌊 [Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species](2412.html) | 
+- 🌊 [Monitoring and predicting the exposure of Pacific salmon to harmful algal biotoxins](2416.html) | 
+- 🌱 [NA](BCSRIF_2019_040-136D.html) | 
 
 ## 📅 December 09, 2025
 
 ### 🐟 Hatcheries
 Research on genetic consequences of hatchery enhancment, and the interactions between hatchery and wild salmon
 
-- 🌊 [Intergenerational transfer and parental origins of DNA methylation variation in Coho and Chinook Salmon](pages/2435.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
-- 🌊 [Relative reproductive success of hatchery- versus natural-origin salmon in Canadian integrated populations](pages/2451.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
-- 🌊 [Epigenetic variation between hatchery- and natural-origin Canadian Chinook Salmon](pages/2453.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
-- 🌊 [Drivers and functional consequences of hatchery epigenetic variation](pages/3103.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
-- 🌊 [Genomic consequences of stray hatchery introgression](pages/3119.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
-- 🌊 [Genetic and epigenetic consequences of hatchery adaptation](pages/3120.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
-- 🌊 [Impact of genetic divergence on outbreeding depression in Chinook Salmon](pages/3121.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
-- 🌱 [Science-based review of hatchery results in the DFO Pacific Region](pages/BCSRIF_2019_136.qmd) | Pacific Salmon Foundation
-- 🌱 [Causes and consequences of vateritic otoliths in hatchery-reared Coho salmon](pages/BCSRIF_2020_239.qmd) | University of Victoria, Department of Biology
+- 🌱 [Causes and consequences of vateritic otoliths in hatchery-reared Coho salmon](BCSRIF_2020_239.html) | 
+- 🌊 [Drivers and functional consequences of hatchery epigenetic variation](3103.html) | 
+- 🌊 [Epigenetic variation between hatchery- and natural-origin Canadian Chinook Salmon](2453.html) | 
+- 🌊 [Genetic and epigenetic consequences of hatchery adaptation](3120.html) | 
+- 🌊 [Genomic consequences of stray hatchery introgression](3119.html) | 
+- 🌊 [Impact of genetic divergence on outbreeding depression in Chinook Salmon](3121.html) | 
+- 🌊 [Intergenerational transfer and parental origins of DNA methylation variation in Coho and Chinook Salmon](2435.html) | 
+- 🌊 [Relative reproductive success of hatchery- versus natural-origin salmon in Canadian integrated populations](2451.html) | 
+- 🌱 [Science-based review of hatchery results in the DFO Pacific Region](BCSRIF_2019_136.html) | 
 
 ### 🐟 Salmon Health
 Monitoring and managing the health of cultured salmon.
 
-- 🌊 [Improvement, Expansion and Modernization of Salmonid Health Diagnostic Services For Optimizing Salmonid Hatchery Health Management.](pages/2408.qmd) | Amy Long
-- 🌊 [Optimization of feeds used in the hatchery production of Pacific Salmon.](pages/2417.qmd) | Ian Forster, Cher LaCoste
-- 🌊 [Prediction of reproductive success of Chinook salmon based on Thiamine concentrations in returning adults.](pages/2418.qmd) | Ian Forster, Cher LaCoste
-- 🌊 [Measurement of stress hormones in scales and its application for the identification of conditions causing chronic stress in Pacific Salmon.](pages/2421.qmd) | Stewart Johnson
-- 🌊 [SHERLOCK assay for rapid genotyping applications](pages/2434.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
-- 🌊 [Developing a proactive, modernized, holistic approach to ensure optimal health and condition of Hatchery Production](pages/2448.qmd) | Kristi Miller-Saunders
-- 🌱 [The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries](pages/BCSRIF_2020_311.qmd) | BC Centre for Aquatic Health Sciences Society
+- 🌊 [Developing a proactive, modernized, holistic approach to ensure optimal health and condition of Hatchery Production](2448.html) | 
+- 🌊 [Improvement, Expansion and Modernization of Salmonid Health Diagnostic Services For Optimizing Salmonid Hatchery Health Management.](2408.html) | 
+- 🌊 [Measurement of stress hormones in scales and its application for the identification of conditions causing chronic stress in Pacific Salmon.](2421.html) | 
+- 🌊 [Optimization of feeds used in the hatchery production of Pacific Salmon.](2417.html) | 
+- 🌊 [Prediction of reproductive success of Chinook salmon based on Thiamine concentrations in returning adults.](2418.html) | 
+- 🌊 [SHERLOCK assay for rapid genotyping applications](2434.html) | 
+- 🌱 [The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries](BCSRIF_2020_311.html) | 
 
 ## 📅 December 11, 2025
 
 ### 🐟 Data And Modelling To Support Decision Making
 Databases, analytic tools, and modelling projects that provide information to support decision-making for salmon conservation and management.
 
-- 🌊 [NA](pages/_blank_.qmd) | 
-- 🌊 [Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future](pages/2410.qmd) | Thomas Therriault, Cher LaCoste
-- 🌊 [A decision-support tool that considers harvest, hatchery, and habitat management levers to support implementation of the Fisheries Act for Pacific salmon](pages/2449.qmd) | Carrie Holt, Brendan Connors, Catarina Wor
-- 🌊 [Fishery & Assessment Data Section - Data Stewardship Unit](pages/2546.qmd) | Shelee Hamilton
-- 🌱 [Supporting the Ongoing Use and Development of the Pacific Salmon Explorer](pages/BCSRIF_2020_279.qmd) | Pacific Salmon Foundation
-- 🌱 [Restoring freshwater connectivity for Pacific salmon](pages/BCSRIF_2022_415.qmd) | Canadian Wildlife Federation
+- 🌊 [A decision-support tool that considers harvest, hatchery, and habitat management levers to support implementation of the Fisheries Act for Pacific salmon](2449.html) | 
+- 🌊 [Fishery & Assessment Data Section - Data Stewardship Unit](2546.html) | 
+- 🌊 [Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future](2410.html) | 
+- 🌱 [Restoring freshwater connectivity for Pacific salmon](BCSRIF_2022_415.html) | 
+- 🌱 [Supporting the Ongoing Use and Development of the Pacific Salmon Explorer](BCSRIF_2020_279.html) | 
+- 🌊 [NA](_blank_.html) | 
+- 🌊 [NA](_blank_.html) | 
 
 ### 🐟 Fisheries Monitoring And Harvest Methods
 Projects that pilot selective methods for harvesting salmon or contribute to our understanding of fisheries impacts on Pacific salmon through improved monitoring
 
-- 🌊 [NA](pages/_blank_.qmd) | 
-- 🌊 [Enhanced salmon bycatch monitoring and sampling in the Pacific region groundfish trawl fishery](pages/2394.qmd) | Cory Lagasse
-- 🌱 [Empowering Indigenous community fisheries with deep learning - computer vision for adaptive management of terminal salmon fisheries](pages/BCSRIF_2019_045.qmd) | Pacific Salmon Foundation
-- 🌱 [Enhancing Sustainability of capture & release marine recreational Pacific salmon fisheries using new tools/technology](pages/BCSRIF_2019_058.qmd) | University of British Columbia (Vancouver), Department of Forest and Conservation Sciences
-- 🌱 [First Nations-led catch monitoring to inform sustainable mixed-stock fisheries management on the Central Coast](pages/BCSRIF_2020_292.qmd) | Central Coast Indigenous Resource Alliance Society
-- 🌱 [Selective Fishing Using a Salmon Trap in the Campbell River Estuary](pages/BCSRIF_2022_347.qmd) | A-Tlegay Fisheries Society
-- 🌱 [FRIM – Short term mortality holding and respirometry studies](pages/BCSRIF_2022_454.qmd) | Sport Fishing Institute of BC
+- 🌱 [Empowering Indigenous community fisheries with deep learning - computer vision for adaptive management of terminal salmon fisheries](BCSRIF_2019_045.html) | 
+- 🌊 [Enhanced salmon bycatch monitoring and sampling in the Pacific region groundfish trawl fishery](2394.html) | 
+- 🌱 [Enhancing Sustainability of capture & release marine recreational Pacific salmon fisheries using new tools/technology](BCSRIF_2019_058.html) | 
+- 🌱 [FRIM – Short term mortality holding and respirometry studies](BCSRIF_2022_454.html) | 
+- 🌱 [First Nations-led catch monitoring to inform sustainable mixed-stock fisheries management on the Central Coast](BCSRIF_2020_292.html) | 
+- 🌱 [Selective Fishing Using a Salmon Trap in the Campbell River Estuary](BCSRIF_2022_347.html) | 
+- 🌊 [NA](_blank_.html) | 
+- 🌊 [NA](_blank_.html) | 
 
