--- a/pages/bcsrif/BCSRIF_2019_045.qmd
+++ b/pages/bcsrif/BCSRIF_2019_045.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Empowering Indigenous community fisheries with deep learning - computer vision for adaptive management of terminal salmon fisheries"
+output-file: "BCSRIF_2019_045.html"
 Leads: ""
 toc: true
 ---
