--- a/pages/bcsrif/BCSRIF_2022_358.qmd
+++ b/pages/bcsrif/BCSRIF_2022_358.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Determining the mechanisms of impacts of a changing climate on zooplankton in the Salish Sea using models and observations"
+output-file: "BCSRIF_2022_358.html"
 Leads: ""
 toc: true
 ---
