--- a/pages/bcsrif/BCSRIF_2022_384.qmd
+++ b/pages/bcsrif/BCSRIF_2022_384.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Development of High-resolution Climate Change Freshwater Hazard Data for BC"
+output-file: "BCSRIF_2022_384.html"
 Leads: ""
 toc: true
 ---
