--- a/pages/pssi/2443.qmd
+++ b/pages/pssi/2443.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Quantitative assessment of the impact of Smallmouth Bass suppression efforts in Cultus Lake and SMB emigration from Cultus Lake"
+output-file: "2443.html"
 Leads: "Daniel Doutaz"
 toc: true
 ---
