--- a/pages/pssi/3120.qmd
+++ b/pages/pssi/3120.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Genetic and epigenetic consequences of hatchery adaptation"
+output-file: "3120.html"
 Leads: "Eric Rondeau, Timothy Healy, Kyle Wellband"
 toc: true
 ---
