--- a/index.qmd
+++ b/index.qmd
@@ -13,21 +13,10 @@ toc: false
 - 🌱 BCSRIF (BC Salmon Restoration and Innovation Fund)
 
 ::: {.calendar}
-<style>
-.calendar-table td { width: 14.28%; height: 100px; border: 1px solid #ccc; padding: 8px; vertical-align: top; }
-.calendar-cell { padding: 4px; font-size: 0.9em; }
-.calendar-button { display: inline-block; margin: 2px 0; padding: 4px 6px; border-radius: 6px; font-size: 0.85em; color: white; text-align: center; font-weight: 500; }
-</style>
-<table class='calendar-table' style='border-collapse: collapse; width: 100%; text-align: center;'>
+<table class='calendar-table'>
 <caption><strong>December 2025</strong></caption>
 <tr>
-<th style='padding: 5px;'>Sun</th>
-<th style='padding: 5px;'>Mon</th>
-<th style='padding: 5px;'>Tue</th>
-<th style='padding: 5px;'>Wed</th>
-<th style='padding: 5px;'>Thu</th>
-<th style='padding: 5px;'>Fri</th>
-<th style='padding: 5px;'>Sat</th>
+<th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th>
 </tr>
 <tr>
 <td></td>
