--- a/pages/pssi/2408.qmd
+++ b/pages/pssi/2408.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Salmon disease testing methods have greatly expanded in the last decade resulting in increased accuracy and decreased turnaround time; implementation of these tests will increase the Finfish Diagnostic Laboratory’s diagnostic capacity. This hatchery lab project collects tissue samples from broodstock and young salmon to confirm new methods are sensitive and specific to pathogens of interest. Once validated, these tests will be used by the Finfish Diagnostic Laboratory.     
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2408.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2408.pdf){.btn .btn-primary target="_blank"}
+</p>
 
