--- a/pages/pssi/2451.qmd
+++ b/pages/pssi/2451.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Salmon bred from a hatchery are often less fit in wild environments than naturally bred salmon. However, this situation can change using different hatchery methods. This genetic study compares DNA samples from returning hatchery Chinook to natural Chinook in Sarita River to see if hatchery methods improve the spawning success of hatchery Chinook.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2451.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2451.pdf){.btn .btn-primary target="_blank"}
+</p>
 
