--- a/pages/pssi/2394.qmd
+++ b/pages/pssi/2394.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Groundfish trawls (non-salmon) are prohibited from selling or trading salmon bycatch, yet these commercial fisheries catch large numbers of salmon without management measures. This harvest sampling study counts salmon bycatch by species and collects tags (coded wire tags) and DNA from Chinook to estimate the total catch rate by stock, especially stocks of concern.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2394.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2394.pdf){.btn .btn-primary target="_blank"}
+</p>
 
