--- a/pages/pssi/2406.qmd
+++ b/pages/pssi/2406.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Has climate change reduced the amount of plankton at the bottom of the food web in BC waters, reducing the carrying capacity for salmon? Have smaller phytoplankton replaced diatoms, lengthening the food chain and making food less nutritious for salmon? This study uses chemical markers in sediment cores and water samples to investigate food web changes in BC coastal inlets.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2406.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2406.pdf){.btn .btn-primary target="_blank"}
+</p>
 
