--- a/pages/pssi/2409.qmd
+++ b/pages/pssi/2409.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Steller sea lions are hypothesized to feed on large numbers of adult Fraser River sockeye salmon when the salmon migrate past Triangle Island, near northern Vancouver Island. This project tags sockeye salmon and Steller sea lions, and also analyzes sea lion diets, to determine if the area is a survival bottleneck.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2409.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2409.pdf){.btn .btn-primary target="_blank"}
+</p>
 
