--- a/pages/pssi/2412.qmd
+++ b/pages/pssi/2412.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Ocean warming and acidic upwelling changes the zooplankton food web for young salmon in the Northeast Pacific. This project measures the survival and nutritional value of pteropods (zooplankton) under different temperatures and acidic conditions in a lab. Researchers then compare lab findings to natural zooplankton conditions.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2412.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2412.pdf){.btn .btn-primary target="_blank"}
+</p>
 
