--- a/pages/pssi/2416.qmd
+++ b/pages/pssi/2416.qmd
@@ -17,4 +17,11 @@ toc: true
 Pacific salmon in Barkley Sound may be exposed to high levels of harmful algal biotoxins in the fall. Biotoxins have been detected in gill tissue from Chinook salmon collected in Barkley Sound.
 We are comparing biotoxin levels with environmental conditions and indicators of fish health.     
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2416.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2416.pdf){.btn .btn-primary target="_blank"}
+</p>
 
