--- a/pages/pssi/2417.qmd
+++ b/pages/pssi/2417.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Hatchery feeds often come from commercial sources focused on other fish species and may be nutritionally incomplete for Pacific salmon. This hatchery feed study develops new diets specific to Chinook and coho and tests the salmon health under different feed trials.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2417.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2417.pdf){.btn .btn-primary target="_blank"}
+</p>
 
