--- a/pages/pssi/2418.qmd
+++ b/pages/pssi/2418.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Thiamine (vitamin B1) deficiency in salmon is diet-related and could be tied to warming oceans and changing food webs. The nutrient deficiency lowers the survival rate for salmon fry and has been observed in Yukon and California Chinook, but hasn’t been studied well in BC. This fish health monitoring study gathers Chinook tissue samples from the Albion test fishery and hatcheries to measure thiamine, fatty acids, and other health parameters to help predict and monitor vulnerable stocks.    
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2418.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2418.pdf){.btn .btn-primary target="_blank"}
+</p>
 
