--- a/pages/pssi/2421.qmd
+++ b/pages/pssi/2421.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Chronic stress impacts fish health and can be measured in salmon by sampling hormone (cortisol) and enzyme deposits in scales. This lab and hatchery study gathers coho and Chinook scale samples from broodstock surveys to develop methods of measuring chronic and acute stress hormone levels that could be expanded to monitor salmon health responses to stressors including climate change.    
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2421.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2421.pdf){.btn .btn-primary target="_blank"}
+</p>
 
