--- a/pages/pssi/2422.qmd
+++ b/pages/pssi/2422.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Advances in lab microchemistry (mass spectrometry) can be used to track juvenile salmon life stage history from ear bone (otolith) samples. Body size at saltwater entry and habitat use can be measured and compared to fish health and age. This project develops methods for “laser ablation-inductively coupled plasma-mass spectrometry” to test on juvenile Chinook sampled in the Follow the Fish program.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2422.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2422.pdf){.btn .btn-primary target="_blank"}
+</p>
 
