--- a/pages/pssi/2425.qmd
+++ b/pages/pssi/2425.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Identifying individual and cumulative threats to salmon and their habitat is critical for effective management and restoration actions. This project estimates and maps nine human activities and landscape disturbance-based threats and four climate change-based threats for the stream network in the Fraser Basin. Results identify threat levels across salmon Conservation Units and the human activities and land uses that contributed most to threats.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2425.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2425.pdf){.btn .btn-primary target="_blank"}
+</p>
 
