--- a/pages/pssi/2437.qmd
+++ b/pages/pssi/2437.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2437.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2437.pdf){.btn .btn-primary target="_blank"}
+</p>
 
