--- a/pages/pssi/2453.qmd
+++ b/pages/pssi/2453.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 There are few genetic differences between hatchery-bred and natural salmon in populations enhanced by the Salmonid Enhancement Program (SEP), but structural modifications to genes may affect gene expression and impact salmon fitness in the wild. This genetic sequencing study gathers Chinook samples from hatcheries at the Nicola, Quinsam, Sarita, Atnarko, and Chilliwack rivers to compare epigenetic (methylation) differences between hatchery and wild Chinook to better monitor the proportion of hatchery salmon in a river.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2453.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2453.pdf){.btn .btn-primary target="_blank"}
+</p>
 
