--- a/pages/pssi/2442.qmd
+++ b/pages/pssi/2442.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Okanagan Chinook are endangered due to habitat destruction and over-fishing. Juvenile Chinook habitat use and risk from predators has not been well studied and may be key factors regarding climate change, invasive species, and restoration efforts. This population study hires graduate students to research juvenile Okanagan Chinook and track survival through tagging.   
 
+## 📄 Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2442.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📥 Download PDF](../../data/PSSI_bulletin/2442.pdf){.btn .btn-primary target="_blank"}
+</p>
 
